tests/cases/smoke/invalid/control_unreachable_after_break.ty
while true {
    break
    print("never")
}
